# ThinkingOS

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
adapters/: README.md  __init__.py  adapter-protocol.md  base.py  host.py
core/: conversation-state.md  engine.md  logic-engine.md  output-schema.md  persona.md  philosophy.md  principles.md  questioning-style.md  validation.md  workflow.md
docs/: architecture.md  architecture.zh.md  claude-guide.md  claude-guide.zh.md  collaboration-levels.md  collaboration-levels.zh.md  collaboration-protocol.md  collaboration-protocol.zh.md  contribution-guide.md  contribution-guide.zh.md  design-principles.md  design-principles.zh.md  developer-guide.md  developer-guide.zh.md  engine.md  engine.zh.md  evaluation-model.md  evaluation-model.zh.md  future-work.md  future-work.zh.md  index.md  index.zh.md  naming-conventions.md  naming-conventions.zh.md  right-problem-guide.md  right-problem-guide.zh.md  roadmap.md  roadmap.zh.md  sdk-guide.md  sdk-guide.zh.md  skill-author-guide.md  skill-author-guide.zh.md  skill-dependencies.md  skill-dependencies.zh.md  skill-lifecycle.md  skill-lifecycle.zh.md  skill-specification.md  skill-specification.zh.md  thinking-graph.md  thinking-graph.zh.md  (+2 more)
knowledge/: critical-thinking.md  decision-making.md  glossary.md  problem-framing.md  problem-solving.md  references.md  (+1 more)
(+216 files in other folders)
